# api-league-clients

./: .gitignore  LICENSE  README.md  apileague-openapi-3.json  build.ps1  java-config.json  package-lock.json
cpp/client/: CMakeLists.txt  OAIArtApi.cpp  OAIArtApi.h  OAIArtSearchAPI_200_response.cpp  OAIArtSearchAPI_200_response.h  OAIBooksApi.cpp  OAIBooksApi.h  OAIComputeNutritionAPI_200_response.cpp  OAIComputeNutritionAPI_200_response.h  OAIComputeNutritionAPI_200_response_ingredient_breakdown_inner.cpp  OAIComputeNutritionAPI_200_response_ingredient_breakdown_inner.h  OAIComputeNutritionAPI_200_response_ingredient_breakdown_inner_nutrients_inner.cpp  OAIComputeNutritionAPI_200_response_ingredient_breakdown_inner_nutrients_inner.h  OAIComputeNutrition_200_response.cpp  OAIComputeNutrition_200_response.h  OAIComputeNutrition_200_response_ingredient_breakdown_inner.cpp  OAIComputeNutrition_200_response_ingredient_breakdown_inner.h  OAIComputeNutrition_200_response_ingredient_breakdown_inner_nutrients_inner.cpp  OAIComputeNutrition_200_response_ingredient_breakdown_inner_nutrients_inner.h  OAIConvertUnitsAPI_200_response.cpp  OAIConvertUnitsAPI_200_response.h  OAIConvertUnits_200_response.cpp  OAIConvertUnits_200_response.h  OAICorrectSpellingAPI_200_response.cpp  OAICorrectSpellingAPI_200_response.h  OAICorrectSpelling_200_response.cpp  OAICorrectSpelling_200_response.h  OAIDetectGenderByNameAPI_200_response.cpp  OAIDetectGenderByNameAPI_200_response.h  OAIDetectGenderByName_200_response.cpp  OAIDetectGenderByName_200_response.h  OAIDetectLanguageAPI_200_response_inner.cpp  OAIDetectLanguageAPI_200_response_inner.h  OAIDetectLanguage_200_response_inner.cpp  OAIDetectLanguage_200_response_inner.h  OAIDetectMainImageColorAPI_200_response_inner.cpp  OAIDetectMainImageColorAPI_200_response_inner.h  OAIDetectMainImageColor_200_response_inner.cpp  OAIDetectMainImageColor_200_response_inner.h  OAIDetectSentimentAPI_200_response.cpp  (+485 more)
cpp/client/com.apileague/: OAIArtApi.cpp  OAIArtApi.h  OAIBooksApi.cpp  OAIBooksApi.h  OAIHumorApi.cpp  OAIHumorApi.h  OAIKnowledgeApi.cpp  OAIKnowledgeApi.h  OAIMathApi.cpp  OAIMathApi.h  OAIMediaApi.cpp  OAIMediaApi.h  OAINewsApi.cpp  OAINewsApi.h  OAIStorageApi.cpp  OAIStorageApi.h  OAITextApi.cpp  OAITextApi.h  OAIWebApi.cpp  OAIWebApi.h
cpp/client/com.apileague.client.model/: OAIInline_response_200.cpp  OAIInline_response_200.h  OAIInline_response_200_1.cpp  OAIInline_response_200_1.h  OAIInline_response_200_10.cpp  OAIInline_response_200_10.h  OAIInline_response_200_11.cpp  OAIInline_response_200_11.h  OAIInline_response_200_12.cpp  OAIInline_response_200_12.h  OAIInline_response_200_13.cpp  OAIInline_response_200_13.h  OAIInline_response_200_13_authors.cpp  OAIInline_response_200_13_authors.h  OAIInline_response_200_14.cpp  OAIInline_response_200_14.h  OAIInline_response_200_14_authors.cpp  OAIInline_response_200_14_authors.h  OAIInline_response_200_14_results.cpp  OAIInline_response_200_14_results.h  OAIInline_response_200_15.cpp  OAIInline_response_200_15.h  OAIInline_response_200_15_results.cpp  OAIInline_response_200_15_results.h  OAIInline_response_200_16.cpp  OAIInline_response_200_16.h  OAIInline_response_200_17.cpp  OAIInline_response_200_17.h  OAIInline_response_200_17_document.cpp  OAIInline_response_200_17_document.h  OAIInline_response_200_17_sentences.cpp  OAIInline_response_200_17_sentences.h  OAIInline_response_200_18.cpp  OAIInline_response_200_18.h  OAIInline_response_200_18_document.cpp  OAIInline_response_200_18_document.h  OAIInline_response_200_18_interestingness.cpp  OAIInline_response_200_18_interestingness.h  OAIInline_response_200_18_interestingness_subscores.cpp  OAIInline_response_200_18_interestingness_subscores.h  (+108 more)
go/: go.mod  (+336 more)
rust/: Cargo.toml  README.md  git_push.sh
rust/.openapi-generator/: FILES
rust/docs/: ArtApi.md  ArtSearchApi200Response.md  BooksApi.md  ComputeNutrition200Response.md  ComputeNutrition200ResponseIngredientBreakdownInner.md  ComputeNutrition200ResponseIngredientBreakdownInnerNutrientsInner.md  ComputeNutritionApi200Response.md  ComputeNutritionApi200ResponseIngredientBreakdownInner.md  ComputeNutritionApi200ResponseIngredientBreakdownInnerNutrientsInner.md  ConvertUnits200Response.md  ConvertUnitsApi200Response.md  CorrectSpelling200Response.md  CorrectSpellingApi200Response.md  DetectGenderByName200Response.md  DetectGenderByNameApi200Response.md  DetectLanguage200ResponseInner.md  DetectLanguageApi200ResponseInner.md  DetectMainImageColor200ResponseInner.md  DetectMainImageColorApi200ResponseInner.md  DetectSentiment200Response.md  DetectSentiment200ResponseDocument.md  DetectSentiment200ResponseSentencesInner.md  DetectSentimentApi200Response.md  DetectSentimentApi200ResponseDocument.md  DetectSentimentApi200ResponseSentencesInner.md  ExtractAuthors200Response.md  ExtractAuthors200ResponseAuthorsInner.md  ExtractAuthorsApi200Response.md  ExtractAuthorsApi200ResponseAuthorsInner.md  ExtractContentFromAWebPage200Response.md  ExtractContentFromAWebPageApi200Response.md  ExtractDates200Response.md  ExtractDates200ResponseDatesInner.md  ExtractDatesApi200Response.md  ExtractDatesApi200ResponseDatesInner.md  ExtractEntities200Response.md  ExtractEntities200ResponseEntitiesInner.md  ExtractEntitiesApi200Response.md  ExtractEntitiesApi200ResponseEntitiesInner.md  ExtractNews200Response.md  (+283 more)
rust/src/apis/: art_api.rs  books_api.rs  configuration.rs  food_api.rs  games_api.rs  humor_api.rs  knowledge_api.rs  math_api.rs  media_api.rs  mod.rs  news_api.rs  storage_api.rs  text_api.rs  web_api.rs
rust/src/models/: art_search_api_200_response.rs  compute_nutrition_200_response.rs  compute_nutrition_200_response_ingredient_breakdown_inner.rs  compute_nutrition_200_response_ingredient_breakdown_inner_nutrients_inner.rs  compute_nutrition_api_200_response.rs  compute_nutrition_api_200_response_ingredient_breakdown_inner.rs  compute_nutrition_api_200_response_ingredient_breakdown_inner_nutrients_inner.rs  convert_units_200_response.rs  convert_units_api_200_response.rs  correct_spelling_200_response.rs  (+309 more)
(+13488 files in other folders)
