cmake_minimum_required(VERSION 3.5)

project(apileague)

set(CMAKE_AUTOMOC ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Network Gui)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Network Gui)

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

add_library(${PROJECT_NAME}
  OAIArtSearchAPI_200_response.h
  OAIComputeNutritionAPI_200_response.h
  OAIComputeNutritionAPI_200_response_ingredient_breakdown_inner.h
  OAIComputeNutritionAPI_200_response_ingredient_breakdown_inner_nutrients_inner.h
  OAIConvertUnitsAPI_200_response.h
  OAICorrectSpellingAPI_200_response.h
  OAIDetectGenderByNameAPI_200_response.h
  OAIDetectLanguageAPI_200_response_inner.h
  OAIDetectMainImageColorAPI_200_response_inner.h
  OAIDetectSentimentAPI_200_response.h
  OAIDetectSentimentAPI_200_response_document.h
  OAIDetectSentimentAPI_200_response_sentences_inner.h
  OAIExtractAuthorsAPI_200_response.h
  OAIExtractAuthorsAPI_200_response_authors_inner.h
  OAIExtractContentFromAWebPageAPI_200_response.h
  OAIExtractDatesAPI_200_response.h
  OAIExtractDatesAPI_200_response_dates_inner.h
  OAIExtractEntitiesAPI_200_response.h
  OAIExtractEntitiesAPI_200_response_entities_inner.h
  OAIExtractNewsAPI_200_response.h
  OAIExtractNewsAPI_200_response_images_inner.h
  OAIExtractNewsAPI_200_response_videos_inner.h
  OAIExtractPublishDateAPI_200_response.h
  OAIFindSimilarBooksAPI_200_response.h
  OAIGenerateNonsenseWordAPI_200_response.h
  OAIListWordSynonymsAPI_200_response.h
  OAIPluralizeWordAPI_200_response.h
  OAIRandomMemeAPI_200_response.h
  OAIRandomPoemAPI_200_response.h
  OAIRandomQuoteAPI_200_response.h
  OAIRandomRiddleAPI_200_response.h
  OAIRandomTriviaAPI_200_response.h
  OAIReadKeyValueFromStoreAPI_200_response.h
  OAIRetrieveArtworkById_200_response.h
  OAIRetrievePageRankAPI_200_response.h
  OAIRetrieveRecipeInformationAPI_200_response.h
  OAIRetrieveRecipeInformationAPI_200_response_credits.h
  OAIRetrieveRecipeInformationAPI_200_response_dietary_properties.h
  OAIRetrieveRecipeInformationAPI_200_response_ingredients_inner.h
  OAIRetrieveRecipeInformationAPI_200_response_ingredients_inner_measures.h
  OAIRetrieveRecipeInformationAPI_200_response_instructions_inner.h
  OAIRetrieveRecipeInformationAPI_200_response_instructions_inner_steps_inner.h
  OAIRetrieveRecipeInformationAPI_200_response_nutrition.h
  OAIRetrieveRecipeInformationAPI_200_response_nutrition_ingredient_breakdown_inner.h
  OAIRetrieveRecipeInformationAPI_200_response_scores.h
  OAIRetrieveRecipeInformationAPI_200_response_taste.h
  OAIRetrieveRecipeInformationAPI_200_response_times.h
  OAIScoreReadabilityAPI_200_response.h
  OAIScoreTextAPI_200_response.h
  OAIScoreTextAPI_200_response_interestingness.h
  OAIScoreTextAPI_200_response_interestingness_subscores.h
  OAIScoreTextAPI_200_response_readability.h
  OAIScoreTextAPI_200_response_readability_mainscores.h
  OAIScoreTextAPI_200_response_readability_subscores.h
  OAIScoreTextAPI_200_response_skimmability.h
  OAIScoreTextAPI_200_response_skimmability_mainscores.h
  OAIScoreTextAPI_200_response_skimmability_subscores.h
  OAIScoreTextAPI_200_response_style.h
  OAIScoreTextAPI_200_response_style_subscores.h
  OAISearchBooksAPI_200_response.h
  OAISearchBooksAPI_200_response_books_inner_inner.h
  OAISearchDrinksAPI_200_response.h
  OAISearchDrinksAPI_200_response_drinks_inner.h
  OAISearchDrinksAPI_200_response_drinks_inner_credits.h
  OAISearchDrinksAPI_200_response_drinks_inner_ingredients_inner.h
  OAISearchDrinksAPI_200_response_drinks_inner_ingredients_inner_measures.h
  OAISearchDrinksAPI_200_response_drinks_inner_ingredients_inner_measures_metric.h
  OAISearchDrinksAPI_200_response_drinks_inner_ingredients_inner_measures_us.h
  OAISearchDrinksAPI_200_response_drinks_inner_instructions_inner.h
  OAISearchDrinksAPI_200_response_drinks_inner_instructions_inner_steps_inner.h
  OAISearchDrinksAPI_200_response_drinks_inner_instructions_inner_steps_inner_ingredients_inner.h
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition.h
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition_caloric_breakdown.h
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition_flavonoids_inner.h
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition_ingredient_breakdown_inner.h
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition_ingredient_breakdown_inner_nutrients_inner.h
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition_nutrients_inner.h
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition_weight_per_serving.h
  OAISearchGifsAPI_200_response.h
  OAISearchGifsAPI_200_response_images_inner.h
  OAISearchIconsAPI_200_response.h
  OAISearchJokesAPI_200_response.h
  OAISearchJokesAPI_200_response_jokes_inner.h
  OAISearchMemesAPI_200_response.h
  OAISearchMemesAPI_200_response_memes_inner.h
  OAISearchNewsAPI_200_response.h
  OAISearchNewsAPI_200_response_news_inner.h
  OAISearchRecipesAPI_200_response.h
  OAISearchRecipesAPI_200_response_recipes_inner.h
  OAISearchRecipesAPI_200_response_recipes_inner_nutrition.h
  OAISearchRecipesAPI_200_response_recipes_inner_nutrition_nutrients_inner.h
  OAISearchRestaurantsAPI_200_response.h
  OAISearchRestaurantsAPI_200_response_restaurants_inner.h
  OAISearchRestaurantsAPI_200_response_restaurants_inner_address.h
  OAISearchRestaurantsAPI_200_response_restaurants_inner_local_hours.h
  OAISearchRestaurantsAPI_200_response_restaurants_inner_local_hours_operational.h
  OAISearchRoyaltyFreeImagesAPI_200_response.h
  OAISearchRoyaltyFreeImagesAPI_200_response_images_inner.h
  OAISearchRoyaltyFreeImagesAPI_200_response_images_inner_license.h
  OAISearchWebAPI_200_response.h
  OAISearchWebAPI_200_response_results_inner.h
  OAISingularizeWordAPI_200_response.h
  OAIStemTextAPI_200_response.h
  OAIStoreKeyValueGETAPI_200_response.h
  OAITagPartOfSpeechAPI_200_response.h
  OAITopNewsAPI_200_response.h
  OAITopNewsAPI_200_response_top_news_inner.h
  OAITopNewsAPI_200_response_top_news_inner_news_inner.h
  OAIVectorSearchAPI_200_response.h
  OAIVectorSearchAPI_200_response_vectors_inner.h
  OAIVerifyEmailAddressAPI_200_response.h
  OAIArtApi.h
  OAIBooksApi.h
  OAIFoodApi.h
  OAIHumorApi.h
  OAIKnowledgeApi.h
  OAIMathApi.h
  OAIMediaApi.h
  OAINewsApi.h
  OAIStorageApi.h
  OAITextApi.h
  OAIWebApi.h
  OAIHelpers.h
  OAIHttpRequest.h
  OAIObject.h
  OAIEnum.h
  OAIHttpFileElement.h
  OAIServerConfiguration.h
  OAIServerVariable.h
  OAIOauth.h
  OAIArtSearchAPI_200_response.cpp
  OAIComputeNutritionAPI_200_response.cpp
  OAIComputeNutritionAPI_200_response_ingredient_breakdown_inner.cpp
  OAIComputeNutritionAPI_200_response_ingredient_breakdown_inner_nutrients_inner.cpp
  OAIConvertUnitsAPI_200_response.cpp
  OAICorrectSpellingAPI_200_response.cpp
  OAIDetectGenderByNameAPI_200_response.cpp
  OAIDetectLanguageAPI_200_response_inner.cpp
  OAIDetectMainImageColorAPI_200_response_inner.cpp
  OAIDetectSentimentAPI_200_response.cpp
  OAIDetectSentimentAPI_200_response_document.cpp
  OAIDetectSentimentAPI_200_response_sentences_inner.cpp
  OAIExtractAuthorsAPI_200_response.cpp
  OAIExtractAuthorsAPI_200_response_authors_inner.cpp
  OAIExtractContentFromAWebPageAPI_200_response.cpp
  OAIExtractDatesAPI_200_response.cpp
  OAIExtractDatesAPI_200_response_dates_inner.cpp
  OAIExtractEntitiesAPI_200_response.cpp
  OAIExtractEntitiesAPI_200_response_entities_inner.cpp
  OAIExtractNewsAPI_200_response.cpp
  OAIExtractNewsAPI_200_response_images_inner.cpp
  OAIExtractNewsAPI_200_response_videos_inner.cpp
  OAIExtractPublishDateAPI_200_response.cpp
  OAIFindSimilarBooksAPI_200_response.cpp
  OAIGenerateNonsenseWordAPI_200_response.cpp
  OAIListWordSynonymsAPI_200_response.cpp
  OAIPluralizeWordAPI_200_response.cpp
  OAIRandomMemeAPI_200_response.cpp
  OAIRandomPoemAPI_200_response.cpp
  OAIRandomQuoteAPI_200_response.cpp
  OAIRandomRiddleAPI_200_response.cpp
  OAIRandomTriviaAPI_200_response.cpp
  OAIReadKeyValueFromStoreAPI_200_response.cpp
  OAIRetrieveArtworkById_200_response.cpp
  OAIRetrievePageRankAPI_200_response.cpp
  OAIRetrieveRecipeInformationAPI_200_response.cpp
  OAIRetrieveRecipeInformationAPI_200_response_credits.cpp
  OAIRetrieveRecipeInformationAPI_200_response_dietary_properties.cpp
  OAIRetrieveRecipeInformationAPI_200_response_ingredients_inner.cpp
  OAIRetrieveRecipeInformationAPI_200_response_ingredients_inner_measures.cpp
  OAIRetrieveRecipeInformationAPI_200_response_instructions_inner.cpp
  OAIRetrieveRecipeInformationAPI_200_response_instructions_inner_steps_inner.cpp
  OAIRetrieveRecipeInformationAPI_200_response_nutrition.cpp
  OAIRetrieveRecipeInformationAPI_200_response_nutrition_ingredient_breakdown_inner.cpp
  OAIRetrieveRecipeInformationAPI_200_response_scores.cpp
  OAIRetrieveRecipeInformationAPI_200_response_taste.cpp
  OAIRetrieveRecipeInformationAPI_200_response_times.cpp
  OAIScoreReadabilityAPI_200_response.cpp
  OAIScoreTextAPI_200_response.cpp
  OAIScoreTextAPI_200_response_interestingness.cpp
  OAIScoreTextAPI_200_response_interestingness_subscores.cpp
  OAIScoreTextAPI_200_response_readability.cpp
  OAIScoreTextAPI_200_response_readability_mainscores.cpp
  OAIScoreTextAPI_200_response_readability_subscores.cpp
  OAIScoreTextAPI_200_response_skimmability.cpp
  OAIScoreTextAPI_200_response_skimmability_mainscores.cpp
  OAIScoreTextAPI_200_response_skimmability_subscores.cpp
  OAIScoreTextAPI_200_response_style.cpp
  OAIScoreTextAPI_200_response_style_subscores.cpp
  OAISearchBooksAPI_200_response.cpp
  OAISearchBooksAPI_200_response_books_inner_inner.cpp
  OAISearchDrinksAPI_200_response.cpp
  OAISearchDrinksAPI_200_response_drinks_inner.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_credits.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_ingredients_inner.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_ingredients_inner_measures.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_ingredients_inner_measures_metric.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_ingredients_inner_measures_us.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_instructions_inner.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_instructions_inner_steps_inner.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_instructions_inner_steps_inner_ingredients_inner.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition_caloric_breakdown.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition_flavonoids_inner.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition_ingredient_breakdown_inner.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition_ingredient_breakdown_inner_nutrients_inner.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition_nutrients_inner.cpp
  OAISearchDrinksAPI_200_response_drinks_inner_nutrition_weight_per_serving.cpp
  OAISearchGifsAPI_200_response.cpp
  OAISearchGifsAPI_200_response_images_inner.cpp
  OAISearchIconsAPI_200_response.cpp
  OAISearchJokesAPI_200_response.cpp
  OAISearchJokesAPI_200_response_jokes_inner.cpp
  OAISearchMemesAPI_200_response.cpp
  OAISearchMemesAPI_200_response_memes_inner.cpp
  OAISearchNewsAPI_200_response.cpp
  OAISearchNewsAPI_200_response_news_inner.cpp
  OAISearchRecipesAPI_200_response.cpp
  OAISearchRecipesAPI_200_response_recipes_inner.cpp
  OAISearchRecipesAPI_200_response_recipes_inner_nutrition.cpp
  OAISearchRecipesAPI_200_response_recipes_inner_nutrition_nutrients_inner.cpp
  OAISearchRestaurantsAPI_200_response.cpp
  OAISearchRestaurantsAPI_200_response_restaurants_inner.cpp
  OAISearchRestaurantsAPI_200_response_restaurants_inner_address.cpp
  OAISearchRestaurantsAPI_200_response_restaurants_inner_local_hours.cpp
  OAISearchRestaurantsAPI_200_response_restaurants_inner_local_hours_operational.cpp
  OAISearchRoyaltyFreeImagesAPI_200_response.cpp
  OAISearchRoyaltyFreeImagesAPI_200_response_images_inner.cpp
  OAISearchRoyaltyFreeImagesAPI_200_response_images_inner_license.cpp
  OAISearchWebAPI_200_response.cpp
  OAISearchWebAPI_200_response_results_inner.cpp
  OAISingularizeWordAPI_200_response.cpp
  OAIStemTextAPI_200_response.cpp
  OAIStoreKeyValueGETAPI_200_response.cpp
  OAITagPartOfSpeechAPI_200_response.cpp
  OAITopNewsAPI_200_response.cpp
  OAITopNewsAPI_200_response_top_news_inner.cpp
  OAITopNewsAPI_200_response_top_news_inner_news_inner.cpp
  OAIVectorSearchAPI_200_response.cpp
  OAIVectorSearchAPI_200_response_vectors_inner.cpp
  OAIVerifyEmailAddressAPI_200_response.cpp
  OAIArtApi.cpp
  OAIBooksApi.cpp
  OAIFoodApi.cpp
  OAIHumorApi.cpp
  OAIKnowledgeApi.cpp
  OAIMathApi.cpp
  OAIMediaApi.cpp
  OAINewsApi.cpp
  OAIStorageApi.cpp
  OAITextApi.cpp
  OAIWebApi.cpp
  OAIHelpers.cpp
  OAIHttpRequest.cpp
  OAIHttpFileElement.cpp
  OAIOauth.cpp
  )

target_include_directories(${PROJECT_NAME}
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_link_libraries(${PROJECT_NAME}
    PUBLIC
        Qt${QT_VERSION_MAJOR}::Core
        Qt${QT_VERSION_MAJOR}::Network
        Qt${QT_VERSION_MAJOR}::Gui

)

configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
)

install(
    FILES ${HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
)

install(
    FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)

install(
    EXPORT ${PROJECT_NAME}Targets
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)
